<?xml version="1.0"?>
<package format="2">
  <name> mowerRobot_launch </name>
  <version> 0.1.0 </version>
  <description> Launch file for autonomous mower robot </description>
  <maintainer email="tli146@hotmail.com">Tony Li</maintainer>

  <license> Apache 2.0 </license>

  <author> Tony Li</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
