<?xml version="1.0"?>
<package format="2">
  <name> path_gen </name>
  <version> 0.0.1 </version>
  <description>turn trees into a path plan</description>
  <maintainer email="tli146@hotmail.com">Tony Li</maintainer>

  <license> Apache 2.0 </license>

  <author> Tony Li</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
